<resources>
    <string name="app_name">laPanaderia</string>
    <string name="texto">Selecciona tu nombre:</string>
    <string name="texto2">Gestión de Inventario</string>
    <string name="desc">imageView</string>
    <string name="btn_log">Aceptar</string>
    <string name="texto3">Inventario</string>
    <string name="cantidad">Cantidad actual</string>
    <string name="nPanes">Numero de nuevos panes: </string>
    <string name="nBandejas">Numero de nuevas bandejas: </string>
    <string name="nPanes2">Numero de panes por bandeja: </string>
    <string name="btnCambio">Ingresar por bandejas</string>
    <string name="btnCambio2">Ingreso por unidad</string>
    <string name="btnDisminuir">Enviar Observación</string>
    <string name="btnAumentar">Agregar Cantidad</string>
    <string name="selCant">Cant.</string>
    <string name="imgDescrip">img18</string>
    <string name="imgDescrip2">img19</string>
    <string name="IPAddress">http://192.168.137.1/</string>
    <string name="lyConfBanner">Configuración</string>
    <string name="lyTxtInfo1">IP Actual: </string>
    <string name="lyTxtInfo2">Nueva IP:  </string>
    <string name="lyBtnSave">Guardar</string>
    <string name="lyBtnExit"> Salir </string>
    <string name="box_ip_actual">Ninguna</string>
    <string name="hint_enter_ip">Ingresar IP</string>
    <string name="nombre_defecto">Nombre</string>
    <!--Strings for view pager-->
    <string name="tab_one">Pan\nPequeno</string>
    <string name="tab_two">Pan\nGrande</string>
    <string name="tab_three">Dulcería</string>
    <string name="tab_four">De queso</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_listado_productos">ListadoProductos</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
