<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EdicionBandejasActivity"
    android:background="@drawable/backgroundlist"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_datos_traidos_pan2"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/gradiant_toolbar"
        android:text="@string/texto3"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorBlanco"
        android:textSize="28sp"
        app:fontFamily="@font/autour_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_ingresar1_pan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="bandejas"
        android:textColorHint="#ffffff"
        android:backgroundTint="@color/colorBlanco"
        android:inputType="number"
        android:textColor="@color/colorBlanco"
        android:textSize="20sp"
        app:fontFamily="@font/autour_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_info_panes2" />

    <TextView
        android:id="@+id/txt_info_panes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nBandejas"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:fontFamily="@font/autour_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_datos_traidos_pan2" />

    <TextView
        android:id="@+id/txt_info_bandejas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nPanes2"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:fontFamily="@font/autour_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ingresar1_pan2" />

    <EditText
        android:id="@+id/et_ingresar2_pan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="panes"
        android:textColorHint="#ffffff"
        android:backgroundTint="@color/colorBlanco"
        android:inputType="number"
        android:textColor="@color/colorBlanco"
        android:textSize="20sp"
        app:fontFamily="@font/autour_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_info_bandejas" />

    <Button
        android:id="@+id/btn_cambio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="PasarAunidad"
        android:text="@string/btnCambio2"
        app:fontFamily="@font/autour_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_agregar_pan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnAumentar"
        app:fontFamily="@font/autour_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ingresar2_pan2" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/imgDescrip2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_agregar_pan2"
        app:srcCompat="@mipmap/plus2" />

</android.support.constraint.ConstraintLayout>