<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/texto2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorSpinner"
        android:textSize="22sp"
        app:fontFamily="@font/autour_one" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/texto"
        android:textColor="@color/colorSpinner"
        app:fontFamily="@font/autour_one" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/desc"
        app:srcCompat="@mipmap/logof" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:onClick="entrar"
        app:fontFamily="@font/autour_one"
        android:text="@string/btn_log"
        android:textColor="@color/colorNegro"
        android:background="@drawable/gtradiant_button"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner"
        style="@style/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="16dp"
        android:popupBackground="@color/colorPrimaryLightTranslucido2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorNegroTranslucido"
        android:onClick="entrarConf"
        app:srcCompat="@android:drawable/ic_menu_manage" />

</RelativeLayout>